SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository and in snapshots and future releases.
===============================================================================================

Enhancements:

SQL editor:
  - With no text selected copy (ctrl+C) and cut (ctrl+X) now copy respectively cut the current line.
  - The copy (ctrl+C), cut (ctrl+X), paste (ctrl+V) and select all (ctrl+A) shortcuts
    can now be changed menu File --> Global Preferences --> tab "Keyboard shortcuts".

Installer:
    - Upgraded Izpack installer to version 5.1.3
    - lib, doc, icon and plugin directories (except from laf) are now update checked. This means
      that files which aren't in the installer are removed from the installation directory.
    NOTE: Upgrading installations done with the previous installer version does not work.
    Please install into an empty directory.

Improved error messages which are displayed as message boxes or in SQuirreL's message panel.

Fixed Log4j vulnerability CVE-2021-4104 concerning Log4j version 1.*.
  The vulnerability received attention in connection with CVE-2021-44228 (log4shell).
  CVE-2021-44228 (log4shell) was already addressed below.
  For details on CVE-2021-4104 see https://nvd.nist.gov/vuln/detail/CVE-2021-4104
  SQuirreL's log4j-1.2.17.jar was fixed as described at
  https://access.redhat.com/security/cve/CVE-2021-4104
  and renamed to log4j-1.2.17_patched_for_CVE-2021-4104.jar.

Query connection pool: Display tooltip when the pool status button is clicked.

On Log4j vulnerability CVE-2021-44228 (log4shell) concerning Log4j2 versions from 2.0-beta9 to 2.14.1:
  Made transparent which logging libraries (Jars) SQuirreL uses by replacing logging Jars
  with no version in their file names and by making sure logging Jars are not bundled in other Jars.
  The logging Jars SQuirreL uses are: log4j-1.2.17.jar, slf4j-api-1.7.32.jar, commons-logging-1.2.jar.