@@ -762,15 +762,12 @@ action.net.sourceforge.squirrel_sql.client.session.action.ConvertToStringBuilder
 
 action.net.sourceforge.squirrel_sql.client.session.action.InQuotesAction.name=Quote SQL
 action.net.sourceforge.squirrel_sql.client.session.action.InQuotesAction.tooltip=Quote the SQL
-action.net.sourceforge.squirrel_sql.client.session.action.InQuotesAction.mnemonic=control alt Q
 
 action.net.sourceforge.squirrel_sql.client.session.action.RemoveQuotesAction.name=Remove Quotes
 action.net.sourceforge.squirrel_sql.client.session.action.RemoveQuotesAction.tooltip=Remove Quotes from the SQL
-action.net.sourceforge.squirrel_sql.client.session.action.RemoveQuotesAction.mnemonic=control alt shift Q
 
 action.net.sourceforge.squirrel_sql.client.session.action.RemoveNewLinesAction.name=Remove NewLines
 action.net.sourceforge.squirrel_sql.client.session.action.RemoveNewLinesAction.tooltip=Remove newline characters from the SQL
-action.net.sourceforge.squirrel_sql.client.session.action.RemoveNewLinesAction.mnemonic=control alt shift N
 
 action.net.sourceforge.squirrel_sql.client.session.action.EscapeDateAction.name=Escape Date
 action.net.sourceforge.squirrel_sql.client.session.action.EscapeDateAction.tooltip=Create Escape for Date/Time/TimeStamp
@@ -808,6 +805,10 @@ action.net.sourceforge.squirrel_sql.client.session.action.ToggleObjectTreeBeside
 action.net.sourceforge.squirrel_sql.client.session.action.ChangeTrackAction.image=
 action.net.sourceforge.squirrel_sql.client.session.action.ChangeTrackAction.name=Rebase change tracking
 action.net.sourceforge.squirrel_sql.client.session.action.ChangeTrackAction.tooltip=Rebase change tracking
+
+action.net.sourceforge.squirrel_sql.client.session.action.DeleteCurrentLineAction.name=Remove current line
+action.net.sourceforge.squirrel_sql.client.session.action.DeleteCurrentLineAction.tooltip=Remove current line
+
 
 
 ########
@@ -1259,4 +1260,8 @@ menuitem.net.sourceforge.squirrel_sql.client.session.action.ToggleObjectTreeBesi
 
 menuitem.net.sourceforge.squirrel_sql.client.session.action.ChangeTrackAction.accelerator=control K
 menuitem.net.sourceforge.squirrel_sql.client.session.action.ChangeTrackAction.mnemonic=
+
+menuitem.net.sourceforge.squirrel_sql.client.session.action.DeleteCurrentLineAction.accelerator=control DELETE
+menuitem.net.sourceforge.squirrel_sql.client.session.action.DeleteCurrentLineAction.mnemonic=
+
 
